--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>3.2</version>
+				<configuration>
+					<rulesets>
+						<ruleset>src/main/config/pmdRules.xml</ruleset>
+					</rulesets>
+				</configuration>
 			</plugin>
 
 			<plugin>
