--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junitVersion}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -125,6 +126,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.12.1</version>
+				<configuration>
+					<configLocation>/meta/config/build/checkstyle.xml</configLocation>
+				</configuration>
 				<reportSets>
 					<reportSet>
 						<reports>
