--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<encoding>ISO-8859-1</encoding>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+
 		<junitVersion>4.11</junitVersion>
 		<commonsMathVersion>3.3</commonsMathVersion>
 	</properties>
@@ -40,6 +41,14 @@
 	</scm>
 	<inceptionYear>2014</inceptionYear>
 
+
+	<repositories>
+		<repository>
+			<id>freeHEPRepository</id>
+			<url>http://java.freehep.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -52,6 +61,36 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>${commonsMathVersion}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.freehep</groupId>
+			<artifactId>freehep-graphicsio-ps</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+    <dependency>
+      <groupId>org.freehep</groupId>
+      <artifactId>freehep-graphicsio-pdf</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.freehep</groupId>
+      <artifactId>freehep-graphicsio-svg</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
+		<dependency>
+			<groupId>org.freehep</groupId>
+			<artifactId>freehep-util</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.freehep</groupId>
+			<artifactId>freehep-graphicsio</artifactId>
+			<version>2.1.1</version>
 		</dependency>
 	</dependencies>
 
@@ -66,6 +105,7 @@
 						<link>http://junit-team.github.io/junit/javadoc/${junitVersion}/</link>
 						<link>http://download.oracle.com/javase/7/docs/api/</link>
 						<link>http://commons.apache.org/math/javadocs/api-${commonsMathVersion}/</link>
+						<link>http://java.freehep.org/vectorgraphics/apidocs/</link>
 					</links>
 					<show>private</show>
 				</configuration>
