--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
       <version>2.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.freehep</groupId>
+      <artifactId>freehep-graphicsio-emf</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
 		<dependency>
 			<groupId>org.freehep</groupId>
 			<artifactId>freehep-util</artifactId>
