--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,19 @@
 			<artifactId>freehep-graphicsio</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.19</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jcommon</artifactId>
+      <version>1.0.23</version>
+    </dependency>
+    
 	</dependencies>
 
 	<build>
