--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,14 @@
 
 	<build>
 		<plugins>
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
 				<configuration>
 					<links>
-						<link>http://junit-team.github.io/junit/javadoc/${junitVersion}/</link>
+						<link>http://junit.org/javadoc/latest/</link>
 						<link>http://download.oracle.com/javase/7/docs/api/</link>
 						<link>http://commons.apache.org/math/javadocs/api-${commonsMathVersion}/</link>
 						<link>http://java.freehep.org/vectorgraphics/apidocs/</link>
@@ -176,11 +177,26 @@
 				</configuration>
 			</plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18</version>
+        <configuration>
+          <reuseForks>false</reuseForks>
+          <forkCount>1</forkCount>
+          <forkedProcessTimeoutInSeconds>1209600</forkedProcessTimeoutInSeconds>
+          <enableAssertions>true</enableAssertions>
+          <failIfNoTests>true</failIfNoTests>
+          <trimStackTrace>false</trimStackTrace>
+        </configuration>
+      </plugin>
+
 		</plugins>
 	</build>
 
 	<reporting>
 		<plugins>
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
@@ -214,24 +230,10 @@
 				</configuration>
 			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18</version>
-        <configuration>
-          <reuseForks>false</reuseForks>
-          <forkCount>1</forkCount>
-          <forkedProcessTimeoutInSeconds>1209600</forkedProcessTimeoutInSeconds>
-          <enableAssertions>true</enableAssertions>
-          <failIfNoTests>true</failIfNoTests>
-          <trimStackTrace>false</trimStackTrace>
-        </configuration>
-      </plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.17</version>
+				<version>2.18</version>
 			</plugin>
 
 			<plugin>
