BibliographyXML can now load Records or Bibliographies from Variables
The BibliographyXML can now load bibliographic records (BibRecords) or
whole bibliographis (Bibliography) from static variables. This reduces
the amount of times we need to specify bibliographic entries in document
templates. This may be a feasible method to centralize references for
the experiment evaluation text generation facilities.

--- a/src/main/resources/examples/org/optimizationBenchmarking/utils/document/exampleTemplate.template
+++ b/src/main/resources/examples/org/optimizationBenchmarking/utils/document/exampleTemplate.template
@@ -68,6 +68,8 @@ We can also do equations:
 However, inline formulas such as
  <inlineMath><cmp op="napproxe"><div><lg><name>&#x3b1;</name></lg><abs><number><long>345</long></number></abs></div><number><int>Integer#MAX_VALUE</int></number></cmp></inlineMath> 
  are also possible.
+ <br/>
+We can cite papers from variables in Java classes:<cite mode="id"><bib:fromJava instance="examples.org.optimizationBenchmarking.utils.document.TemplateDocumentExample#STATIC_BIB_ENTRY"/></cite> 
 </body>
 </section>
 
