Further Improvements to Unit Tests + BugFix to RandomDocumentExample
We now ensure that the random transforms set to the Graphics are
invertible in RandomDocumentExample.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
+  
+# Build notifications: If the build fails, send an email.
+notifications:
+  email:
+    on_success: never
+    on_failure: always
