Added Infrastructure to Exclude Slow Tests from Maven Build
Slow tests now can be tagged with CategorySlowTests to be excluded
from Maven Builds. Maven dependencies can now be cached by the Travis
CI build environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ notifications:
   email:
     on_success: never
     on_failure: always
+    
+# Cache Maven dependencies to speed up builds.
+cache:
+  directories:
+  - $HOME/.m2
