--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
 					<enableAssertions>true</enableAssertions>
 					<failIfNoTests>true</failIfNoTests>
 					<trimStackTrace>false</trimStackTrace>
+					<excludedGroups>test.junit.CategorySlowTests</excludedGroups>
 				</configuration>
 			</plugin>
 
