Now Trying to Build under Java 8
I added Oracle and Open JDK 8 to the build environments of Travis CI.
Let's see whether that works.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
+  - oraclejdk8
+  - openjdk8
     
 # Cache Maven dependencies to speed up builds.
 cache:
