--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>optimizationBenchmarking.org</groupId>
 	<artifactId>optimizationBenchmarking</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>Optimization Benchmarking Tool Suite</name>
 	<description>The Optimization Benchmarking Tool Suite is a software framework which supports researchers in testing and benchmarking optimization algorithms. It aims for a holistic approach providing deeper insights into what problem features or algorithm settings have which impact on the overall solution quality.</description>
@@ -19,8 +19,10 @@
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
 
-		<junitVersion>4.11</junitVersion>
-		<commonsMathVersion>3.3</commonsMathVersion>
+		<jdk.version>1.7</jdk.version>
+		<junit.version>4.11</junit.version>
+		<commons.math.majorVersion>3</commons.math.majorVersion>
+		<commons.math.version>${commons.math.majorVersion}.3</commons.math.version>
 	</properties>
 
 	<licenses>
@@ -31,16 +33,16 @@
 		</license>
 	</licenses>
 
-
 	<issueManagement>
 		<url>https://github.com/optimizationBenchmarking/optimizationBenchmarking/issues</url>
 		<system>GitHub</system>
 	</issueManagement>
+
 	<scm>
 		<url>https://github.com/optimizationBenchmarking/optimizationBenchmarking</url>
 	</scm>
-	<inceptionYear>2014</inceptionYear>
 
+	<inceptionYear>2014</inceptionYear>
 
 	<repositories>
 		<repository>
@@ -53,14 +55,14 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junitVersion}</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-math3</artifactId>
-			<version>${commonsMathVersion}</version>
+			<artifactId>commons-math${commons.math.majorVersion}</artifactId>
+			<version>${commons.math.version}</version>
 		</dependency>
 
 		<dependency>
@@ -130,7 +132,7 @@
 					<links>
 						<link>http://junit.org/javadoc/latest/</link>
 						<link>http://download.oracle.com/javase/7/docs/api/</link>
-						<link>http://commons.apache.org/math/javadocs/api-${commonsMathVersion}/</link>
+						<link>http://commons.apache.org/math/javadocs/api-${commons.math.version}/</link>
 						<link>http://java.freehep.org/vectorgraphics/apidocs/</link>
 					</links>
 					<show>private</show>
@@ -169,8 +171,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 					<encoding>${encoding}</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
@@ -207,6 +209,75 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>/examples</exclude>
+					</excludes>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries />
+							<addDefaultSpecificationEntries />
+							<mainClass>org.optimizationBenchmarking.experimentation.evaluation.system.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+
+							<createSourcesJar>true</createSourcesJar>
+							<shadeTestJar>true</shadeTestJar>
+
+							<minimizeJar>true</minimizeJar>
+
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+
+							<createDependencyReducedPom>false</createDependencyReducedPom>
+
+							<shadedClassifierName>full</shadedClassifierName>
+
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>org.optimizationBenchmarking.experimentation.evaluation.system.Main</mainClass>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.PluginXmlResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -221,51 +292,8 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.12.1</version>
-				<configuration>
-					<configLocation>/meta/config/build/checkstyle.xml</configLocation>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<report>checkstyle</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.2</version>
-				<configuration>
-					<rulesets>
-						<ruleset>meta/config/build/pmdRules.xml</ruleset>
-					</rulesets>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.18</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.3</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.5.5</version>
-				<configuration>
-					<effort>Max</effort>
-					<threshold>Low</threshold>
-				</configuration>
 			</plugin>
 
 		</plugins>
