Reduced Memory Footprint of TextOutputTest
Instead of using the CategoryMemoryIntenseTest, I now try reducing the
memory footprint of the TextOutputTest instead.

--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
 					<enableAssertions>true</enableAssertions>
 					<failIfNoTests>true</failIfNoTests>
 					<trimStackTrace>false</trimStackTrace>
-					<excludedGroups>test.junit.CategorySlowTests,test.junit.CategoryMemoryIntenseTests</excludedGroups>
+					<excludedGroups>test.junit.CategorySlowTests</excludedGroups>
 				</configuration>
 			</plugin>
 
