--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
 machine:
   environment:
-    JAVA_OPTS: -Xms512m -Xmx512m
+    JAVA_OPTS: -Xms2g -Xmx2g
+    
+test:
+  override:
+    - mvn test
+       timeout: 1000
