Added Tests for LaTeX Tool Chain and Document Class
I added JUnit tests for the LaTeX Tool Chain and document classes.
Therefore, the build tools have been re-configured to install texlive.
Let's see whether that can work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,9 @@ jdk:
 cache:
   directories:
   - $HOME/.m2
+  
+  
+# install texlive: we can use this to test LaTeX document generation
+install:
+  - sudo apt-get update
+  - sudo apt-get install texlive
