--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ test:
         
 # Here we try to install texlive in order to be able to
 # test the LaTeX tool chains.
-dependencies:
-  post:
+machine:
+  pre:
     - sudo apt-get update
     - sudo apt-get install texlive
