--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,9 @@ machine:
 # Here we try to install texlive in order to be able to
 # test the LaTeX tool chains.
   pre:
+    - sudo apt-get remove texlive
+    - sudo apt-get purge texlive
+    - sudo apt-get autoremove
     - sudo apt-get update
     - sudo apt-get install texlive
     
