--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
 # Here we try to install texlive in order to be able to
 # test the LaTeX tool chains.
   pre:
-    - sudo apt-get install texlive
+    - sudo apt-get install texlive -y
     
 # We set a high timeout to prevent the test from being
 # terminated unexpectedly.
