--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,10 @@ machine:
     JAVA_OPTS: -Xms1536m -Xmx1536m
     MAVEN_OPTS: -Xms1536m -Xmx1536m
     _JAVA_OPTIONS: -Xms1536m -Xmx1536m
+# Here we try to install texlive in order to be able to
+# test the LaTeX tool chains.
+  pre:
+    - sudo apt-get install texlive -y
     
 # We set a high timeout to prevent the test from being
 # terminated unexpectedly.
