--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,10 @@ test:
   override:
     - mvn test --fail-at-end:
         timeout: 10000
+        
+# The branches to be ignored
+general:
+  branches:
+    ignore:
+      - gh-pages
+      - documentation
