Added a Custom Travis CI Build Step to Prevent Timeouts
The Travis CI builds 94.2 and 95.2
https://travis-ci.org/optimizationBenchmarking/optimizationBenchmarking/jobs/57309927
https://travis-ci.org/optimizationBenchmarking/optimizationBenchmarking/jobs/57333590
have both timed out in the process of testing the PDF output of the
LaTeX tool. Both builds are openjdk, oddly. So I will try a custom
build command using the travis_wait directive, according to
http://docs.travis-ci.com/user/build-timeouts/
http://docs.travis-ci.com/user/customizing-the-build/
http://docs.travis-ci.com/user/languages/java/

# custom build step
script: travis_wait mvn test compile package deploy site

I am not sure if it will work, but let's try.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ cache:
 install:
   - sudo apt-get update -y
   - sudo apt-get install texlive -y
+  
+# custom build step
+script: travis_wait mvn test compile package deploy site
