travis_wait seems not to be a good idea
The travis_wait command does not seem to be a good idea. Let's try
without it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - sudo apt-get install texlive -y
   
 # custom build step
-script: travis_wait mvn test compile package deploy site
+script: mvn test compile package deploy site
