Less Output for JavaDoc and Travis Builds
The Travis CI builts failed since the log files became too large. I
reduce the loggable output, for the installation for dependencies
via apt-get (in .travis.yml) and the JavaDoc plugin (pom.xml).

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ cache:
   
 # install texlive: we can use this to test LaTeX document generation
 install:
-  - sudo apt-get update -y
-  - sudo apt-get install texlive -y
+  - sudo apt-get -q -y -f update
+  - sudo apt-get -q -y -f install texlive
   
 # custom build step
-script: mvn test compile package deploy site
+script: mvn -C -B test compile package deploy site
