--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,9 @@
 						<link>http://java.freehep.org/vectorgraphics/apidocs/</link>
 					</links>
 					<show>private</show>
+					<detectLinks>true</detectLinks>
+					<detectJavaApiLink>true</detectJavaApiLink>
+					<quiet>true</quiet>
 				</configuration>
 				<executions>
 					<execution>
