Attributes use Accurate Arithmetic, XeLaTeX, Better Number Conversion
Several (minor) improvements in this commit.

I modified the PropertyValueGrouper's grouping arithmetic to use more
accurate mathematics functions (those in our "math.functions" package)
which try to use integer arithmetic wherever possible. This should
result in possibly better results (but probably no change will be
visible).

I added XeLaTeX as last fallback element to the LaTeX tool chain.
XeLaTeX supports JPEG, PNG, EPS, and PDF figures. It also supports BMP
figures, but here we may get "! Dimension too large." errors, as there
seems to be a problem with the resolution information of BMPs. This
error may also appear with JPEG or PNG, but I did not observe it yet.
(see http://stackoverflow.com/questions/653380 and
     http://compgroups.net/comp.text.tex/xelatex-and-jpeg-sizing/763)

The class NumericalTypes now sports a "valueOf" function which tries to
convert a primitive numerical type to the "smallest" possible instance
of Number. I.e., a double with value -2 will become a java.lang.Byte of
said value. This is cute and reduce our need to check for numerical
values when converting.

.travis.yml has been updated in order to reduce the build time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - sudo apt-get -q -y -f install texlive
   
 # custom build step
-script: mvn -C -B test compile package deploy
+script: mvn -C -B test compile
