--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,7 @@
 						<manifest>
 							<addDefaultImplementationEntries />
 							<addDefaultSpecificationEntries />
-							<mainClass>org.optimizationBenchmarking.experimentation.evaluation.system.Main</mainClass>
+							<mainClass>org.optimizationBenchmarking.experimentation.evaluation.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -280,11 +280,8 @@
 
 							<createSourcesJar>true</createSourcesJar>
 							<shadeTestJar>true</shadeTestJar>
-
-							<minimizeJar>true</minimizeJar>
-
+							<minimizeJar>false</minimizeJar>
 							<shadedArtifactAttached>true</shadedArtifactAttached>
-
 							<createDependencyReducedPom>false</createDependencyReducedPom>
 
 							<shadedClassifierName>full</shadedClassifierName>
@@ -304,7 +301,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.optimizationBenchmarking.experimentation.evaluation.system.Main</mainClass>
+									<mainClass>org.optimizationBenchmarking.experimentation.evaluation.Main</mainClass>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
