BugFix for Template Example
The template example contained the now-removed element "nprop" for "not
proportional to". Although the Unicode standard has a character for
"proportional to", it does not have one for the opposite. Dealing with
this (probably never used) sitation required ugly hacks, so I removed
it.

The Maven POM has been updated to the target version 0.8.1.

--- a/src/test/resources/examples/org/optimizationBenchmarking/utils/document/exampleTemplate.template
+++ b/src/test/resources/examples/org/optimizationBenchmarking/utils/document/exampleTemplate.template
@@ -60,7 +60,7 @@ I can also quote the title of a publication, such as<cite mode="title"><bib:book
 <body>
 We can also do equations:
 <equation>
-<cmp op="nprop"><pow><brace><add><sqrt><number>3</number></sqrt><name>xx</name></add></brace>
+<cmp op="prop"><pow><brace><add><sqrt><number>3</number></sqrt><name>xx</name></add></brace>
 <number><double>&#x3c0;</double></number></pow>
 <log><number><int>Byte#MAX_VALUE</int></number><name>X</name></log>
 </cmp>
