Attempt to Add atom and rss feed.

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ name: Optimization Benchmarking
 markdown: redcarpet
 baseurl: /optimizationBenchmarking
 include: [.url]
+authorName: Thomas Weise
+authorEmail: tweise@ustc.edu.cn
