Set My Developer ID in Maven POM to GitHub ID

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<developers>
 		<developer>
-			<id>tweise</id>
+			<id>thomasWeise</id>
 			<name>Thomas Weise</name>
 			<email>tweise@ustc.edu.cn</email>
 			<url>http://www.it-weise.de/</url>
