Now Running R Test also under Travis and Semaphore
We now also run the test for `R` implementation of `IMathEngine` under
travis.ci and semaphore. Therefore, I have made the test a bit faster.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ cache:
 install:
   - sudo apt-get -q -y -f update
   - sudo apt-get -q -y -f install texlive
+  - sudo apt-get -q -y -f install r-base r-base-dev
   
 # custom build step
 script: mvn -C -B test compile
